--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.3.2",
+    "gulp-file-include": "^2.3.0",
+    "gulp-run": "^1.7.1",
+    "gulp-watch": "^5.0.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.7"
   },
   "scripts": {
     "build": "postcss css/styles.css -o build/styles.css"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
+    "gulp": "^4.0.2"
   }
 }
